// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box box-padding="..." /> DEPRECATED props props box-padding-lr 1`] = `
<div
  className="ek-box ek-box_padding-lr_xxl"
/>
`;

exports[`<Box box-padding="..." /> DEPRECATED props props box-padding-tb 1`] = `
<div
  className="ek-box ek-box_padding-tb_xxl"
/>
`;

exports[`<Box box-padding="..." /> extend 2 props box-padding 1`] = `
<div
  className="ek-box ek-box_padding-top_xs ek-box_padding-bottom_xs ek-box_padding-right_xl ek-box_padding-left_xl"
/>
`;

exports[`<Box box-padding="..." /> extend 3 props box-padding 1`] = `
<div
  className="ek-box ek-box_padding-top_xs ek-box_padding-right_xl ek-box_padding-left_xl ek-box_padding-bottom_m"
/>
`;

exports[`<Box box-padding="..." /> extend 4 props box-padding 1`] = `
<div
  className="ek-box ek-box_padding-top_s ek-box_padding-right_m ek-box_padding-bottom_l ek-box_padding-left_xl"
/>
`;

exports[`<Box box-padding="..." /> props box-padding 1`] = `
<div
  className="ek-box ek-box_padding_xxl"
/>
`;

exports[`<Box box-padding="..." /> props box-padding-bottom 1`] = `
<div
  className="ek-box ek-box_padding-bottom_xxl"
/>
`;

exports[`<Box box-padding="..." /> props box-padding-left 1`] = `
<div
  className="ek-box ek-box_padding-left_xxl"
/>
`;

exports[`<Box box-padding="..." /> props box-padding-right 1`] = `
<div
  className="ek-box ek-box_padding-right_xxl"
/>
`;

exports[`<Box box-padding="..." /> props box-padding-top 1`] = `
<div
  className="ek-box ek-box_padding-top_xxl"
/>
`;
